--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-refresh": "^0.10.0",
     "sass-loader": "^11.1.0",
     "style-loader": "^2.0.0",
+    "typescript": "^4.2.4",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
